split out for testing.

--- a/tests/testit.ipynb
+++ b/tests/testit.ipynb
@@ -12,14 +12,17 @@
     "import shutil\n",
     "import os\n",
     "\n",
-    "root = pl.Path(r'C:\\Users\\kevin.omalley\\OneDrive - University of Limerick\\Teaching\\2023(24)\\PS4034 SPR 2023-24\\Assessments\\test')\n",
-    "subs = pl.Path(r'C:\\Users\\kevin.omalley\\OneDrive - University of Limerick\\Teaching\\2023(24)\\PS4034 SPR 2023-24\\Assessments\\test\\test_submissions')\n",
-    "bs_sheet = pl.Path(r'C:\\Users\\kevin.omalley\\OneDrive - University of Limerick\\Teaching\\2023(24)\\PS4034 SPR 2023-24\\Assessments\\PS4034 - EMPIRICAL PSYCHOLOGY 2 20234 SEM2_GradesExport_2024-03-11-09-34.csv')\n",
-    "rubric = pl.Path(r'C:\\Users\\kevin.omalley\\OneDrive - University of Limerick\\Teaching\\2023(24)\\PS4034 SPR 2023-24\\Assessments\\test\\Documents\\qual feeback blank.xlsx')\n",
+    "\n",
+    "#### defining the necceary paths\n",
+    "root = pl.Path(r'C:\\Users\\Kevin.OMalley\\OneDrive - University of Limerick\\Teaching\\2023(24)\\PS6022 SPR 2023-24\\Assessments\\Assignment 2')\n",
+    "grader_file = root / 'graders.txt'\n",
+    "assignment_name = 'Qualitative Points Grade <Numeric MaxPoints:100 Category:Final Assignment>'\n",
+    "subs = root / 'test_submissions'\n",
+    "bs_sheet = pl.Path(r'C:\\Users\\Kevin.OMalley\\OneDrive - University of Limerick\\Teaching\\2023(24)\\PS6022 SPR 2023-24\\Assessments\\PS6022 - ADVANCED EMPIRICAL PSYCHOLOGY 20234 SEM2_GradesExport_2024-03-11-09-32.csv')\n",
+    "rubric = pl.Path(r'C:\\Users\\Kevin.OMalley\\OneDrive - University of Limerick\\Teaching\\2023(24)\\PS6022 SPR 2023-24\\Assessments\\Assignment 2\\Documents\\qual feeback blank.xlsx')\n",
     "Assignment_name = 'Qualitative Points Grade <Numeric MaxPoints:100 Category:Final Assignment>'\n",
     "\n",
-    "dl1= pl.Path(r'C:\\Users\\kevin.omalley\\OneDrive - University of Limerick\\Teaching\\2023(24)\\PS4034 SPR 2023-24\\Assessments\\test\\Qualitative lab report Download 06 May 2024 710 PM')\n",
-    "dl2= pl.Path(r'C:\\Users\\kevin.omalley\\OneDrive - University of Limerick\\Teaching\\2023(24)\\PS4034 SPR 2023-24\\Assessments\\test\\Qualitative lab report Download 10 May 2024 233 PM')"
+    "dl1= pl.Path(r'C:\\Users\\Kevin.OMalley\\OneDrive - University of Limerick\\Teaching\\2023(24)\\PS6022 SPR 2023-24\\Assessments\\Assignment 2\\Student Submissions')\n"
    ]
   },
   {
@@ -60,7 +63,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Folder copied from Qualitative lab report Download 06 May 2024 710 PM to test_submissions\n"
+      "Folder copied from Student Submissions to test_submissions\n"
      ]
     }
    ],
@@ -70,43 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Create a list of all directories, taking the second part of the name split by ' - '\n",
-    "names = [i.name.split(' - ')[1] for i in subs.iterdir() if i.is_dir()]\n",
-    "\n",
-    "# Use a set to keep track of the names we want to retain (one folder per name)\n",
-    "retained_folders = set()\n",
-    "\n",
-    "# Directory to iterate and manipulate folders\n",
-    "for folder in subs.iterdir():\n",
-    "    if folder.is_dir():\n",
-    "        # Extract the identifier or unique part of the name\n",
-    "        folder_identifier = folder.name.split(' - ')[1]\n",
-    "        \n",
-    "        # Check if we have already retained a folder for this identifier\n",
-    "        if folder_identifier not in retained_folders:\n",
-    "            retained_folders.add(folder_identifier)\n",
-    "        else:\n",
-    "            # If we already have a folder for this person, remove the current one\n",
-    "            shutil.rmtree(folder)  # Be careful with this, as it permanently deletes the folder\n",
-    "            print(f\"Removed folder: {folder}\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -139,37 +106,37 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>11048069</td>\n",
-       "      <td>OBrien</td>\n",
-       "      <td>Margaret</td>\n",
+       "      <td>0100609</td>\n",
+       "      <td>Lehane</td>\n",
+       "      <td>Patricia</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>13012118</td>\n",
+       "      <td>Darmody</td>\n",
+       "      <td>BarryJohn</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
        "      <td>16041836</td>\n",
        "      <td>KENNEDY</td>\n",
        "      <td>SIOBHAN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>20274785</td>\n",
-       "      <td>Barry</td>\n",
-       "      <td>Ellen</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>20328877</td>\n",
-       "      <td>Gleeson</td>\n",
-       "      <td>Tara</td>\n",
+       "      <td>18241557</td>\n",
+       "      <td>Hayes</td>\n",
+       "      <td>Laura</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>21236445</td>\n",
-       "      <td>Scanlon</td>\n",
-       "      <td>Sharon</td>\n",
+       "      <td>18251218</td>\n",
+       "      <td>OShea</td>\n",
+       "      <td>Sara</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -178,11 +145,11 @@
       ],
       "text/plain": [
        "  Student ID Last Name First Name  \\\n",
-       "0   11048069    OBrien   Margaret   \n",
-       "1   16041836   KENNEDY    SIOBHAN   \n",
-       "2   20274785     Barry      Ellen   \n",
-       "3   20328877   Gleeson       Tara   \n",
-       "4   21236445   Scanlon     Sharon   \n",
+       "0    0100609    Lehane   Patricia   \n",
+       "1   13012118   Darmody  BarryJohn   \n",
+       "2   16041836   KENNEDY    SIOBHAN   \n",
+       "3   18241557     Hayes      Laura   \n",
+       "4   18251218     OShea       Sara   \n",
        "\n",
        "   Qualitative Points Grade <Numeric MaxPoints:100 Category:Final Assignment>  \n",
        "0                                                NaN                           \n",
@@ -192,7 +159,7 @@
        "4                                                NaN                           "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,9 +171,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Folder renamed for DALY, IAN (19276338)\n",
+      "Folder renamed for ADEDEJI, TEMITAYO (23126442)\n",
+      "Folder renamed for BRADY, THERESE (23131322)\n",
+      "Folder renamed for BYRNE, CIARA (23118784)\n",
+      "Folder renamed for CASEY, KEVIN (19230613)\n",
+      "Folder renamed for CONHEADY, LORRAINE (22295879)\n",
+      "Folder renamed for CONNOLLY, CAOIMHEAILIS (19269579)\n",
+      "Folder renamed for DARMODY, BARRYJOHN (13012118)\n",
+      "Folder renamed for DOHENY, RACHEL (19231636)\n",
+      "Folder renamed for DOHERTY, MEGAN (23043083)\n",
+      "Folder renamed for DORJEE, RINZIN (23175583)\n",
+      "Folder renamed for FLANAGAN, TARA (19265972)\n",
+      "Folder renamed for FOLEY, RYAN (22038604)\n",
+      "Folder renamed for GAFFNEY, SHAUNA (23172134)\n",
+      "Folder renamed for HASTINGS, EMMA (19234929)\n",
+      "Folder renamed for HAYES, LAURA (18241557)\n",
+      "Folder renamed for HEDDERMAN, TAYLOR (19242387)\n",
+      "Folder renamed for HOWLEY, ANNA (23074124)\n",
+      "Folder renamed for KENNEDY, TADHG (19245114)\n",
+      "Folder renamed for LEHANE, PATRICIA (0100609)\n",
+      "Folder renamed for MARTIN, WILLIAM (22131965)\n",
+      "Folder renamed for MCCARTHYDOIG, FLO (21150532)\n",
+      "Folder renamed for MILSTEIN, MIRIAMDAJCZGEWAND (22295461)\n",
+      "Folder renamed for MINITER, ADAM (19256833)\n",
+      "Folder renamed for OREGAN, LAURYN (22145257)\n",
+      "Folder renamed for OSHEA, SARA (18251218)\n",
+      "Folder renamed for TOUHEY, JADE (22178244)\n",
+      "Folder rename operations logged to folder_rename_log.csv.\n"
+     ]
+    }
+   ],
    "source": [
     "gh.rename_folders(a, subs)"
    ]
@@ -214,9 +216,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "helper_test",
+   "display_name": ".venv",
    "language": "python",
-   "name": "helper_test"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -228,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
