--- a/tests/testit.ipynb
+++ b/tests/testit.ipynb
@@ -12,17 +12,14 @@
     "import shutil\n",
     "import os\n",
     "\n",
-    "\n",
-    "#### defining the necceary paths\n",
-    "root = pl.Path(r'C:\\Users\\Kevin.OMalley\\OneDrive - University of Limerick\\Teaching\\2023(24)\\PS6022 SPR 2023-24\\Assessments\\Assignment 2')\n",
-    "grader_file = root / 'graders.txt'\n",
-    "assignment_name = 'Qualitative Points Grade <Numeric MaxPoints:100 Category:Final Assignment>'\n",
-    "subs = root / 'test_submissions'\n",
-    "bs_sheet = pl.Path(r'C:\\Users\\Kevin.OMalley\\OneDrive - University of Limerick\\Teaching\\2023(24)\\PS6022 SPR 2023-24\\Assessments\\PS6022 - ADVANCED EMPIRICAL PSYCHOLOGY 20234 SEM2_GradesExport_2024-03-11-09-32.csv')\n",
-    "rubric = pl.Path(r'C:\\Users\\Kevin.OMalley\\OneDrive - University of Limerick\\Teaching\\2023(24)\\PS6022 SPR 2023-24\\Assessments\\Assignment 2\\Documents\\qual feeback blank.xlsx')\n",
+    "root = pl.Path(r'C:\\Users\\kevin.omalley\\OneDrive - University of Limerick\\Teaching\\2023(24)\\PS4034 SPR 2023-24\\Assessments\\test')\n",
+    "subs = pl.Path(r'C:\\Users\\kevin.omalley\\OneDrive - University of Limerick\\Teaching\\2023(24)\\PS4034 SPR 2023-24\\Assessments\\test\\test_submissions')\n",
+    "bs_sheet = pl.Path(r'C:\\Users\\kevin.omalley\\OneDrive - University of Limerick\\Teaching\\2023(24)\\PS4034 SPR 2023-24\\Assessments\\PS4034 - EMPIRICAL PSYCHOLOGY 2 20234 SEM2_GradesExport_2024-03-11-09-34.csv')\n",
+    "rubric = pl.Path(r'C:\\Users\\kevin.omalley\\OneDrive - University of Limerick\\Teaching\\2023(24)\\PS4034 SPR 2023-24\\Assessments\\test\\Documents\\qual feeback blank.xlsx')\n",
     "Assignment_name = 'Qualitative Points Grade <Numeric MaxPoints:100 Category:Final Assignment>'\n",
     "\n",
-    "dl1= pl.Path(r'C:\\Users\\Kevin.OMalley\\OneDrive - University of Limerick\\Teaching\\2023(24)\\PS6022 SPR 2023-24\\Assessments\\Assignment 2\\Student Submissions')\n"
+    "dl1= pl.Path(r'C:\\Users\\kevin.omalley\\OneDrive - University of Limerick\\Teaching\\2023(24)\\PS4034 SPR 2023-24\\Assessments\\test\\Qualitative lab report Download 06 May 2024 710 PM')\n",
+    "dl2= pl.Path(r'C:\\Users\\kevin.omalley\\OneDrive - University of Limerick\\Teaching\\2023(24)\\PS4034 SPR 2023-24\\Assessments\\test\\Qualitative lab report Download 10 May 2024 233 PM')"
    ]
   },
   {
@@ -63,7 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Folder copied from Student Submissions to test_submissions\n"
+      "Folder copied from Qualitative lab report Download 06 May 2024 710 PM to test_submissions\n"
      ]
     }
    ],
@@ -73,7 +70,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Create a list of all directories, taking the second part of the name split by ' - '\n",
+    "names = [i.name.split(' - ')[1] for i in subs.iterdir() if i.is_dir()]\n",
+    "\n",
+    "# Use a set to keep track of the names we want to retain (one folder per name)\n",
+    "retained_folders = set()\n",
+    "\n",
+    "# Directory to iterate and manipulate folders\n",
+    "for folder in subs.iterdir():\n",
+    "    if folder.is_dir():\n",
+    "        # Extract the identifier or unique part of the name\n",
+    "        folder_identifier = folder.name.split(' - ')[1]\n",
+    "        \n",
+    "        # Check if we have already retained a folder for this identifier\n",
+    "        if folder_identifier not in retained_folders:\n",
+    "            retained_folders.add(folder_identifier)\n",
+    "        else:\n",
+    "            # If we already have a folder for this person, remove the current one\n",
+    "            shutil.rmtree(folder)  # Be careful with this, as it permanently deletes the folder\n",
+    "            print(f\"Removed folder: {folder}\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -106,37 +139,37 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0100609</td>\n",
-       "      <td>Lehane</td>\n",
-       "      <td>Patricia</td>\n",
+       "      <td>11048069</td>\n",
+       "      <td>OBrien</td>\n",
+       "      <td>Margaret</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>13012118</td>\n",
-       "      <td>Darmody</td>\n",
-       "      <td>BarryJohn</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>16041836</td>\n",
        "      <td>KENNEDY</td>\n",
        "      <td>SIOBHAN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20274785</td>\n",
+       "      <td>Barry</td>\n",
+       "      <td>Ellen</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>18241557</td>\n",
-       "      <td>Hayes</td>\n",
-       "      <td>Laura</td>\n",
+       "      <td>20328877</td>\n",
+       "      <td>Gleeson</td>\n",
+       "      <td>Tara</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>18251218</td>\n",
-       "      <td>OShea</td>\n",
-       "      <td>Sara</td>\n",
+       "      <td>21236445</td>\n",
+       "      <td>Scanlon</td>\n",
+       "      <td>Sharon</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -145,11 +178,11 @@
       ],
       "text/plain": [
        "  Student ID Last Name First Name  \\\n",
-       "0    0100609    Lehane   Patricia   \n",
-       "1   13012118   Darmody  BarryJohn   \n",
-       "2   16041836   KENNEDY    SIOBHAN   \n",
-       "3   18241557     Hayes      Laura   \n",
-       "4   18251218     OShea       Sara   \n",
+       "0   11048069    OBrien   Margaret   \n",
+       "1   16041836   KENNEDY    SIOBHAN   \n",
+       "2   20274785     Barry      Ellen   \n",
+       "3   20328877   Gleeson       Tara   \n",
+       "4   21236445   Scanlon     Sharon   \n",
        "\n",
        "   Qualitative Points Grade <Numeric MaxPoints:100 Category:Final Assignment>  \n",
        "0                                                NaN                           \n",
@@ -159,7 +192,7 @@
        "4                                                NaN                           "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,40 +204,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Folder renamed for DALY, IAN (19276338)\n",
-      "Folder renamed for ADEDEJI, TEMITAYO (23126442)\n",
-      "Folder renamed for BRADY, THERESE (23131322)\n",
-      "Folder renamed for BYRNE, CIARA (23118784)\n",
-      "Folder renamed for CASEY, KEVIN (19230613)\n",
-      "Folder renamed for CONHEADY, LORRAINE (22295879)\n",
-      "Folder renamed for CONNOLLY, CAOIMHEAILIS (19269579)\n",
-      "Folder renamed for DARMODY, BARRYJOHN (13012118)\n",
-      "Folder renamed for DOHENY, RACHEL (19231636)\n",
-      "Folder renamed for DOHERTY, MEGAN (23043083)\n",
-      "Folder renamed for DORJEE, RINZIN (23175583)\n",
-      "Folder renamed for FLANAGAN, TARA (19265972)\n",
-      "Folder renamed for FOLEY, RYAN (22038604)\n",
-      "Folder renamed for GAFFNEY, SHAUNA (23172134)\n",
-      "Folder renamed for HASTINGS, EMMA (19234929)\n",
-      "Folder renamed for HAYES, LAURA (18241557)\n",
-      "Folder renamed for HEDDERMAN, TAYLOR (19242387)\n",
-      "Folder renamed for HOWLEY, ANNA (23074124)\n",
-      "Folder renamed for KENNEDY, TADHG (19245114)\n",
-      "Folder renamed for LEHANE, PATRICIA (0100609)\n",
-      "Folder renamed for MARTIN, WILLIAM (22131965)\n",
-      "Folder renamed for MCCARTHYDOIG, FLO (21150532)\n",
-      "Folder renamed for MILSTEIN, MIRIAMDAJCZGEWAND (22295461)\n",
-      "Folder renamed for MINITER, ADAM (19256833)\n",
-      "Folder renamed for OREGAN, LAURYN (22145257)\n",
-      "Folder renamed for OSHEA, SARA (18251218)\n",
-      "Folder renamed for TOUHEY, JADE (22178244)\n",
+      "Folder renamed for OBRIEN, MARGARET (11048069)\n",
+      "Folder renamed for BARRY, ELLEN (20274785)\n",
+      "Folder renamed for GLEESON, TARA (20328877)\n",
+      "Folder renamed for SCANLON, SHARON (21236445)\n",
+      "Folder renamed for HORAN, SARAH (21238022)\n",
+      "Folder renamed for COLLINSO, KYLE (21265097)\n",
+      "Folder renamed for ONEILL, DAVINA (21303053)\n",
+      "Folder renamed for WONGMC, ALIYAH (21305676)\n",
+      "Folder renamed for WAGNERASKEY, HANNAH (21306877)\n",
+      "Folder renamed for NOONAN, DAVID (21307423)\n",
+      "Folder renamed for SHEEHY, EOGHAN (21308144)\n",
+      "Folder renamed for OCONNOR, LAURA (21308942)\n",
+      "Folder renamed for BREEN, KATHERINE (21309418)\n",
+      "Folder renamed for MANNION, EABHA (21309922)\n",
+      "Folder renamed for GAFFNEY, LILY (21311293)\n",
+      "Folder renamed for OBRIEN, CLODAGH (21315515)\n",
+      "Folder renamed for HENRY, ROISIN (21316244)\n",
+      "Folder renamed for LEONARD, RACHEL (21318662)\n",
+      "Folder renamed for GARVEY, ORIANA (21319456)\n",
+      "Folder renamed for OROURKE, ALEAH (21320551)\n",
+      "Folder renamed for OSULLIVAN, SARAH (21321167)\n",
+      "Folder renamed for FITZGERALD, AOIFE (21325553)\n",
+      "Folder renamed for TREACY, EMMA (21326657)\n",
+      "Folder renamed for ODONNELL, DAVID (21326797)\n",
+      "Folder renamed for GORMAN, NICOLE (21328617)\n",
+      "Folder renamed for FLYNN, LEVI (21329753)\n",
+      "Folder renamed for KERINS, EMER (21332894)\n",
+      "Folder renamed for HURLEY, LAUREN (21337365)\n",
+      "Folder renamed for MORGAN, CIAN (21353654)\n",
+      "Folder renamed for CULLEN, THOMAS (22300171)\n",
+      "Folder renamed for ONYEOCHA, CHIOMA (22305351)\n",
+      "Folder renamed for MCCLAY, LAURA (22305327)\n",
+      "Folder renamed for ZACHARIAH, AMY (22305548)\n",
+      "Folder renamed for BRADY, KEVIN (22305637)\n",
+      "Folder renamed for STACKPOOLE, MARTIN (22306668)\n",
+      "Folder renamed for DISKIN, EABHA (22336532)\n",
+      "Folder renamed for OCALLAGHAN, HOLLY (22336737)\n",
+      "Folder renamed for SZTEJNER, JULIA (22337202)\n",
+      "Folder renamed for DORAN, JESSICA (22337954)\n",
+      "Folder renamed for VAUGHAN, DEARBHAILE (22338977)\n",
+      "Folder renamed for NIDHUIBHIR, ROISIN (22339434)\n",
+      "Folder renamed for CLANCY, ROSE (22339698)\n",
+      "Folder renamed for OMAHONY, THOMAS (22339795)\n",
+      "Folder renamed for CONDREN, ORLAITH (22340513)\n",
+      "Folder renamed for BUGGY, MATTHEW (22340785)\n",
+      "Folder renamed for GLYNN, JACK (22341617)\n",
+      "Folder renamed for FORSEY, BEN (22342176)\n",
+      "Folder renamed for TALTY, AINE (22342494)\n",
+      "Folder renamed for TONER, NIAMH (22342389)\n",
+      "Folder renamed for SINNOTT, AOIBHIN (22344276)\n",
+      "Folder renamed for IBRAHAM, MICHAEL (22344489)\n",
+      "Folder renamed for OMOCHERE, FAVOUR (22346252)\n",
+      "Folder renamed for MEE, KAELAN (22346716)\n",
+      "Folder renamed for JONES, ABBIE (22347143)\n",
+      "Folder renamed for WALSH, AMY (22347178)\n",
+      "Folder renamed for SMITH, GRACE (22347798)\n",
+      "Folder renamed for MURPHY, OISIN (22348719)\n",
+      "Folder renamed for KING, SAIDHBH (22349421)\n",
+      "Folder renamed for GRADY, KATE (22350233)\n",
+      "Folder renamed for DONNELLY, HANNAH (22350217)\n",
+      "Folder renamed for MCDONNELL, ANNA (22351779)\n",
+      "Folder renamed for QUIRKE, JENNIFER (22352171)\n",
+      "Folder renamed for KEEGAN, NIAMH (22353917)\n",
+      "Folder renamed for RYAN, AVA (22354093)\n",
+      "Folder renamed for KELLEHER, TAMARA (22354328)\n",
+      "Folder renamed for WALDRON, MICHAEL (22354549)\n",
+      "Folder renamed for OCONNELL, VICKY (22354476)\n",
+      "Folder renamed for HOGAN, NAOISE (22354824)\n",
+      "Folder renamed for SHEERIN, ANNA (22355901)\n",
+      "Folder renamed for BUZU, ELEONORA (22356266)\n",
+      "Folder renamed for LEHANE, CHLOE (22356606)\n",
+      "Folder renamed for OFLYNN, EMMA (22356746)\n",
+      "Folder renamed for MCTIERNAN, DERMOT (22358595)\n",
+      "Folder renamed for KELLY, SAOIRSE (22358854)\n",
+      "Folder renamed for KELLEHER, TADGH (22359478)\n",
+      "Folder renamed for DANIELS, JAMES (22360069)\n",
+      "Folder renamed for ROBERTS, NIAMH (22360867)\n",
+      "Folder renamed for HEFFERNAN, AVA (22361057)\n",
+      "Folder renamed for OCONNELL, CATHERINE (22361669)\n",
+      "Folder renamed for OSHEA, RUAIRC (22362509)\n",
+      "Folder renamed for LENEHAN, CAOIMHE (22362916)\n",
+      "Folder renamed for OBRIEN, CORMAC (22363408)\n",
+      "Folder renamed for FOLEY, JANE (22363785)\n",
+      "Folder renamed for FEENANELEVINE, JOSEPH (22364714)\n",
+      "Folder renamed for CORCORAN, CAITLIN (22365621)\n",
+      "Folder renamed for ODONOVAN, ORLA (22367772)\n",
+      "Folder renamed for KIRBY, CAITLIN (22368663)\n",
+      "Folder renamed for CARTY, JUDE (22370722)\n",
+      "Folder renamed for BRICKLEY, ORLA (22370943)\n",
+      "Folder renamed for MALONEYHONAN, KATELYNN (22371435)\n",
+      "Folder renamed for GIWAEKEOLERE, ADETOLA (22372822)\n",
+      "Folder renamed for HOWLEY, CONOR (22374213)\n",
+      "Folder renamed for ODUFUWA, ANNA (22374434)\n",
+      "Folder renamed for IVANOVA, MAIIA (22378367)\n",
+      "Folder rename operations logged to folder_rename_log.csv.\n"
+     ]
+    }
+   ],
+   "source": [
+    "gh.rename_folders(a, subs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "moves = [i for i in dl2.iterdir() if i.is_dir()]\n",
+    "\n",
+    "for move in moves:\n",
+    "    shutil.copytree(move, subs / move.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Folder renamed for OSULLIVAN, NIAMH (22359028)\n",
+      "Folder renamed for MCGUINNESS, LISA (22363149)\n",
       "Folder rename operations logged to folder_rename_log.csv.\n"
      ]
     }
@@ -216,9 +347,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "helper_test",
    "language": "python",
-   "name": "python3"
+   "name": "helper_test"
   },
   "language_info": {
    "codemirror_mode": {
@@ -230,7 +361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
